--- a/dev/index.html
+++ b/dev/index.html
@@ -1,6 +1,6 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <link rel="stylesheet" type="text/css" href="../css/console.css">
+    <link rel="stylesheet" type="text/css" href="../resources/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../resources/css/console.css">
 
     <script src="../node_modules/react/umd/react.development.js"></script>
     <script src="../node_modules/react-dom/umd/react-dom.development.js"></script>
