--- a/dev/index.html
+++ b/dev/index.html
@@ -8,4 +8,9 @@
 <body>
     <div id="root"></div>
     <script src="/dev/js/scripts.js"></script>
+    <script>
+        window.onload = function() {
+            TerminalApp.start();
+        }
+    </script>
 </body>
