--- a/about.html
+++ b/about.html
@@ -1,13 +1,16 @@
 <head>
     <link rel="stylesheet" type="text/css" href="/resources/css/styles.css">
     <link rel="stylesheet" type="text/css" href="/resources/css/console.css">
-
+    
     <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+
 </head>
 <body>
-    <div id="root"></div>
-    <script src="/js/scripts.js"></script>
+    <div id="root">This is a dynamic website that relies heavily on JavaScript 
+        for animations and interactivity. For the best experience, please enable
+        JavaScript in your browser</div>
+    <script src="/dev/js/scripts.js"></script>
     <script>
         window.onload = function() {
             TerminalApp.start('cat about.md');
