Added more content

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,6 +1,11 @@
 <head>
     <link rel="stylesheet" type="text/css" href="/resources/css/styles.css">
     <link rel="stylesheet" type="text/css" href="/resources/css/console.css">
+    <link rel="stylesheet" type="text/css" href="/resources/css/prism.css">
+
+    <script type="text/javascript" async
+        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
     
     <script src="/node_modules/react/umd/react.development.js"></script>
     <script src="/node_modules/react-dom/umd/react-dom.development.js"></script>
@@ -16,4 +21,5 @@
             TerminalApp.start();
         }
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/prism.min.js"></script>
 </body>
