--- a/projects/physik.html
+++ b/projects/physik.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="/resources/css/console.css">
     <link rel="stylesheet" type="text/css" href="/resources/css/prism.css">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.5" />
     <title>Fred Choi: physik</title>
 
     <script type="text/javascript" async
@@ -20,6 +20,8 @@
         for animations and interactivity. For the best experience, please enable
         JavaScript in your browser</div>
     <script src="/js/scripts.js"></script>
+    <div id="preload-01"/>
+    <div id="preload-02"/>
     <script>
         window.onload = function() {
             TerminalApp.start('cat /projects/physik.md');
