--- a/demos/web/index.html
+++ b/demos/web/index.html
@@ -12,5 +12,5 @@
     <canvas></canvas>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="./web/script.js"></script>
+    <script src="./script.js"></script>
 </body>
