--- a/demos/picturing/index.html
+++ b/demos/picturing/index.html
@@ -4,7 +4,7 @@
 	<title>picTuring</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="picturing/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
 	
@@ -85,12 +85,12 @@
 	</canvas>
 	
 	<!-- Scripts -->
-	<script src="picturing/js/libs/jquery.min.js"></script>
-	<script src="picturing/js/libs/lz-string.min.js"></script>
-	<script src="picturing/js/source/utils.js"></script>	
-	<script src="picturing/js/source/turing.js"></script>
-	<script src="picturing/js/source/graphics.js"></script>
-	<script src="picturing/js/source/io.js"></script>
-	<script src="picturing/js/source/script.js"></script>
+	<script src="js/libs/jquery.min.js"></script>
+	<script src="js/libs/lz-string.min.js"></script>
+	<script src="js/source/utils.js"></script>	
+	<script src="js/source/turing.js"></script>
+	<script src="js/source/graphics.js"></script>
+	<script src="js/source/io.js"></script>
+	<script src="js/source/script.js"></script>
     </body>
 </html>
