--- a/demos/better-colors.html
+++ b/demos/better-colors.html
@@ -1,9 +1,16 @@
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.5" />
     <style>
         body {
             margin: 0;
             font-family: sans-serif;
             overflow: hidden;
+        }
+
+        input[type=button] {
+          height: 50px;
+          width: 50px;
+          font-size: 30px;
         }
 
         #controls {
